--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,212 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
-  <title>Vanilla JavaScript App</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Matthew Blake is a Cybersecurity student at Penn State Berks, and a Security Risk Managment Internat Exelon">
+    <meta name="keywords" content="Matthew, Blake, Matthew Blake, Portfolio, Penn State, Penn State Berks, Berks, CrossCountry Consulting, CrossCountry, CCC, MB, Andrea Barrett, Barrett, Dr. Andrea Barrett, Dr. Barrett, Security+, Sec+, Berks Technology Club, Berks Tech Club, Berks Tech, Tech Club, Technology Club, BTC, IST, IT, Information Sciences & Technology, Information Sciences and Technology, Information Science, Information Sciences, Information Technology, Cybersecurity, Cybersecurity Analytics, Cybersecurity Operations, Cybersecurity Analytics & Operations, Cybersecurity Analytics and Operations, Cyber Security, Information Security, Security, Programmer, Programming, Software Developer">
+    <meta name="author" content="Matthew Blake">
+    <title>Matthew Blake's Portfolio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="/src/styles.css">
+    <link rel="icon" href="/src/images/favicon.png">
+    <script defer src="/src/contact.js"></script>
 </head>
-
 <body>
-  <main>
-    <h1>Vanilla JavaScript App</h1>
-  </main>
-</body>
+    <!-- NAVBAR -->
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1c1f26;">
+        <div class="container-fluid">
+        <a class="navbar-brand" href="#profile"> 
+            <img src="/src/images/logo-white.png" alt="Berks Technology Club Logo" class="logo">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+        </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#profile">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about-me">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#projects">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact Me</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
+    <!-- PROFILE -->
+    <div class="container-fluid profile" id="profile">
+        <div class="container-sm">
+            <div class="row">
+                <div class="col custom-mobile-center">
+                    <h1>Matthew Blake</h1>
+                    <h2 class="tagline">Programmer, IT Professional</h2>
+                    <div class="about-me-btn">
+                        <div type="button" class="btn">
+                            <a href="#about-me">About Me</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 btn-col">
+                    <div class="centered">
+                        <a href="https://www.linkedin.com/in/matthew-at-psu/" target="_blank">
+                            <div type="button" class="profile-btn">
+                                <div class="btn-area">
+                                    <img class="btn-icon" src="/src/images/linkedin.png" alt="LinkedIn Logo" style="max-height: 20px;">
+                                    LinkedIn
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <br>
+                    <div class="centered">
+                        <a href="https://github.com/bmattblake" target="_blank">
+                            <div type="button" class="profile-btn">
+                                <div class="btn-area">
+                                    <img class="btn-icon" src="/src/images/github.png" alt="GitHub Logo" style="max-height: 20px;">
+                                    GitHub
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                    <br>
+                    <div class="centered">
+                        <a href="mailto:matthew.blake@blake-tech.com">
+                            <div type="button" class="profile-btn">
+                            
+                                <div class="btn-area">
+                                    <img class="btn-icon" src="/src/images/email.png" alt="Email Logo" style="max-width: 20px;">
+                                    Email
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ABOUT ME -->
+    <div class="container-fluid about-me" id="about-me">
+        <div class="container-sm">
+            <div class="row">
+                <div class="col-md-10 text-left custom-mobile-center">
+                    <h1 class="about-me-text">About Me</h1>
+                    <p>Hi! My name is Matthew Blake. I am a Security Risk Analyst Intern at Exelon and a Cybersecurity Student at Penn State ! I am profficeint in web development, Azure ActiveDirectory, and data analysis with Python.</p>
+                </div>
+                <div class="col-md-2 col-sm-12 headshot-col">
+                    <img src="/src/images/blue2_orange_square.png" class="headshot">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- PROJECTS -->
+    <div class="container-fluid projects" id="projects">
+        <div class="container-sm">
+            <div class="row">
+                <div class="col-md-9 text-left custom-mobile-center">
+                    <h1 class="projects-text">Projects</h1>
+                </div>
+            </div>
+            <div class="row">
+                <!-- 1: SIEM-Honeypot Home Lab -->
+                <div class="col-lg-3 col-md-6 projects">
+                    <div class="card h-100" style="width: 18rem;">
+                        <img class="card-img-top border-bottom" src="/src/images/siem-honeypot.png" alt="Card image cap">
+                        <div class="card-body text-secondary">
+                            <h5 class="card-title">SIEM-Honeypot Home Lab</h5>
+                            <p class="card-text">Deployed a honeypot using Azure Cloud. Used Microsoft Sentinel (Azure's SIEM service) to display global attack data (RDP brute-force) on world map.</p>
+                        </div>
+                        <div class="card-footer"> 
+                            <small>
+                                <a href="https://github.com/bmattblake/SIEM-Honeypot-Lab/" target="_blank" class="link">View Project On GitHub</a>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <!-- 2: FIM -->
+                <div class="col-lg-3 col-md-6 projects">
+                    <div class="card h-100" style="width: 18rem;">
+                        <img class="card-img-top border-bottom" src="/src/images/sentinel-mini.png" alt="Card image cap">
+                        <div class="card-body text-secondary">
+                            <h5 class="card-title">File Integrity Monitor</h5>
+                            <p class="card-text">A java program that will watch folders that the user specifies, and notify them of any changes to that folder.</p>
+                        </div>
+                        <div class="card-footer"> 
+                            <small>
+                                <a href="https://github.com/bmattblake/Sentinel-File-Inegrity-Monitor" target="_blank" class="link">View Project On GitHub</a>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <!-- 3. Pcap File Analyzer -->
+                <div class="col-lg-3 col-md-6 projects">
+                    <div class="card h-100" style="width: 18rem;">
+                        <img class="card-img-top border-bottom" src="/src/images/iqpcap-mini.png" alt="Card image cap">
+                        <div class="card-body text-secondary">
+                            <h5 class="card-title">Pcap File Analyzer</h5>
+                            <p class="card-text">Reads Pcap files, and provides useful insights about the network traffic inside. Additionally, it can track a TCP connection between two different devices.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small>
+                                <a href="https://github.com/bmattblake/Cypher-Keylogger" target="_blank" class="link">View Project On GitHub</a>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+                <!-- 4: KEYLOGGER -->
+                <div class="col-lg-3 col-md-6 projects">
+                    <div class="card h-100" style="width: 18rem;">
+                        <img class="card-img-top border-bottom" src="/src/images/keylogger-mini.png" alt="Card image cap">
+                        <div class="card-body text-secondary">
+                            <h5 class="card-title">Keylogger</h5>
+                            <p class="card-text">Python script that will log keystrokes, and send data to attacker via SMTP.</p>
+                        </div>
+                        <div class="card-footer">
+                            <small>
+                                <a href="https://github.com/bmattblake/Cypher-Keylogger" target="_blank" class="link">View Project On GitHub</a>
+                            </small>
+                        </div>
+                    </div>
+                </div>
+            </div>      
+        </div>
+    </div>
+
+    <!-- CONTACT -->
+    <div class="container-sm contact" id="contact">
+        <div class="comtainer-fluid">
+            <h1 class="fw-bold text-center">Contact Me</h1>
+            <p class="contact-subtext text-center">I'd love to hear from you</p>
+            <div class="container-sm contact-form">
+                <form id="contactForm">
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Email Address">
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" id="message" name="message" placeholder="Message" rows="5" required></textarea>
+                    </div>
+                        <div class="text-center">
+                            <button type="submit" class="btn">Submit</button>
+                        </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>   
+</body>
 </html>
