--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,16 @@
     <meta name="author" content="Matthew Blake">
     <title>Matthew Blake's Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="/src/styles.css">
-    <link rel="icon" href="/src/images/favicon.png">
-    <script defer src="/src/contact.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/favicon.png">
+    <script defer src="contact.js"></script>
 </head>
 <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #1c1f26;">
         <div class="container-fluid">
         <a class="navbar-brand" href="#profile"> 
-            <img src="/src/images/logo-white.png" alt="Berks Technology Club Logo" class="logo">
+            <img src="images/logo-white.png" alt="Berks Technology Club Logo" class="logo">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -59,7 +59,7 @@
                         <a href="https://www.linkedin.com/in/matthew-at-psu/" target="_blank">
                             <div type="button" class="profile-btn">
                                 <div class="btn-area">
-                                    <img class="btn-icon" src="/src/images/linkedin.png" alt="LinkedIn Logo" style="max-height: 20px;">
+                                    <img class="btn-icon" src="images/linkedin.png" alt="LinkedIn Logo" style="max-height: 20px;">
                                     LinkedIn
                                 </div>
                             </div>
@@ -70,7 +70,7 @@
                         <a href="https://github.com/bmattblake" target="_blank">
                             <div type="button" class="profile-btn">
                                 <div class="btn-area">
-                                    <img class="btn-icon" src="/src/images/github.png" alt="GitHub Logo" style="max-height: 20px;">
+                                    <img class="btn-icon" src="images/github.png" alt="GitHub Logo" style="max-height: 20px;">
                                     GitHub
                                 </div>
                             </div>
@@ -82,7 +82,7 @@
                             <div type="button" class="profile-btn">
                             
                                 <div class="btn-area">
-                                    <img class="btn-icon" src="/src/images/email.png" alt="Email Logo" style="max-width: 20px;">
+                                    <img class="btn-icon" src="images/email.png" alt="Email Logo" style="max-width: 20px;">
                                     Email
                                 </div>
                             </div>
@@ -102,7 +102,7 @@
                     <p>Hi! My name is Matthew Blake. I am a Security Risk Analyst Intern at Exelon and a Cybersecurity Student at Penn State ! I am profficeint in web development, Azure ActiveDirectory, and data analysis with Python.</p>
                 </div>
                 <div class="col-md-2 col-sm-12 headshot-col">
-                    <img src="/src/images/blue2_orange_square.png" class="headshot">
+                    <img src="images/blue2_orange_square.png" class="headshot">
                 </div>
             </div>
         </div>
@@ -120,7 +120,7 @@
                 <!-- 1: SIEM-Honeypot Home Lab -->
                 <div class="col-lg-3 col-md-6 projects">
                     <div class="card h-100" style="width: 18rem;">
-                        <img class="card-img-top border-bottom" src="/src/images/siem-honeypot.png" alt="Card image cap">
+                        <img class="card-img-top border-bottom" src="images/siem-honeypot.png" alt="Card image cap">
                         <div class="card-body text-secondary">
                             <h5 class="card-title">SIEM-Honeypot Home Lab</h5>
                             <p class="card-text">Deployed a honeypot using Azure Cloud. Used Microsoft Sentinel (Azure's SIEM service) to display global attack data (RDP brute-force) on world map.</p>
@@ -135,7 +135,7 @@
                 <!-- 2: FIM -->
                 <div class="col-lg-3 col-md-6 projects">
                     <div class="card h-100" style="width: 18rem;">
-                        <img class="card-img-top border-bottom" src="/src/images/sentinel-mini.png" alt="Card image cap">
+                        <img class="card-img-top border-bottom" src="images/sentinel-mini.png" alt="Card image cap">
                         <div class="card-body text-secondary">
                             <h5 class="card-title">File Integrity Monitor</h5>
                             <p class="card-text">A java program that will watch folders that the user specifies, and notify them of any changes to that folder.</p>
@@ -150,7 +150,7 @@
                 <!-- 3. Pcap File Analyzer -->
                 <div class="col-lg-3 col-md-6 projects">
                     <div class="card h-100" style="width: 18rem;">
-                        <img class="card-img-top border-bottom" src="/src/images/iqpcap-mini.png" alt="Card image cap">
+                        <img class="card-img-top border-bottom" src="images/iqpcap-mini.png" alt="Card image cap">
                         <div class="card-body text-secondary">
                             <h5 class="card-title">Pcap File Analyzer</h5>
                             <p class="card-text">Reads Pcap files, and provides useful insights about the network traffic inside. Additionally, it can track a TCP connection between two different devices.</p>
@@ -165,7 +165,7 @@
                 <!-- 4: KEYLOGGER -->
                 <div class="col-lg-3 col-md-6 projects">
                     <div class="card h-100" style="width: 18rem;">
-                        <img class="card-img-top border-bottom" src="/src/images/keylogger-mini.png" alt="Card image cap">
+                        <img class="card-img-top border-bottom" src="images/keylogger-mini.png" alt="Card image cap">
                         <div class="card-body text-secondary">
                             <h5 class="card-title">Keylogger</h5>
                             <p class="card-text">Python script that will log keystrokes, and send data to attacker via SMTP.</p>
