update mobile formatting

--- a/src/index.html
+++ b/src/index.html
@@ -46,10 +46,10 @@
         <div class="container-sm">
             <div class="row">
                 <div class="col custom-mobile-center">
-                    <h1>Matthew Blake</h1>
+                    <h1 class="name">Matthew Blake</h1>
                     <h2 class="tagline">Programmer, IT Professional</h2>
                     <div class="about-me-btn">
-                        <div type="button" class="btn">
+                        <div type="button" class="btn main-btn">
                             <a href="#about-me">About Me</a>
                         </div>
                     </div>
