--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col custom-mobile-center">
                     <h1 class="name">Matthew Blake</h1>
-                    <h2 class="tagline">Programmer, IT Professional</h2>
+                    <h2 class="tagline">Cyber Professional, Programmer</h2>
                     <div class="about-me-btn">
                         <div type="button" class="btn main-btn">
                             <a href="#about-me">About Me</a>
@@ -99,7 +99,7 @@
             <div class="row">
                 <div class="col-md-10 text-left custom-mobile-center">
                     <h1 class="about-me-text">About Me</h1>
-                    <p>Hi! My name is Matthew Blake. I am a Security Risk Analyst Intern at Exelon and a Cybersecurity Student at Penn State ! I am profficeint in web development, Azure ActiveDirectory, and data analysis with Python.</p>
+                    <p class="about-me-descr">Hi! My name is Matthew Blake. I am a Security Risk Analyst Intern at Exelon and a Cybersecurity Student at Penn State! I am profficeint in web development, Azure ActiveDirectory, and data analysis with Python.</p>
                 </div>
                 <div class="col-md-2 col-sm-12 headshot-col">
                     <img src="images/blue2_orange_square.png" class="headshot">
