--- a/src/index.html
+++ b/src/index.html
@@ -47,7 +47,7 @@
             <div class="row">
                 <div class="col custom-mobile-center">
                     <h1 class="name">Matthew Blake</h1>
-                    <h2 class="tagline">Programmer, IT Professional</h2>
+                    <h2 class="tagline">Cybersecurity Practicioner</h2>
                     <div class="about-me-btn">
                         <div type="button" class="btn main-btn">
                             <a href="#about-me">About Me</a>
