--- a/src/index.html
+++ b/src/index.html
@@ -99,9 +99,9 @@
             <div class="row">
                 <div class="col-md-10 text-left custom-mobile-center">
                     <h1 class="about-me-text">About Me</h1>
-                    <p class="about-me-descr">Matthew Blake is a Cybersecurity Professional with experience in privileged access management, insider threat detection, cloud security and more. He currently secures critical infrastructure at Exelon, where he builds automation tools, designs threat detection dashboards, and implements enterprise access controls using Python, Splunk, CyberArk PAM, and Azure. He holds certifications in GIAC Information Security Professional (GISP), and CompTIA Security+.</p>
+                    <p class="about-me-descr">Matthew Blake is a cybersecurity professional with experience in privileged access management, insider threat detection, cloud security and more. He currently secures critical infrastructure at Exelon, where he builds automation tools, designs threat detection dashboards, and implements enterprise access controls using Python, Splunk, CyberArk PAM, and Azure. He holds certifications in GIAC Information Security Professional (GISP), and CompTIA Security+.</p>
                 </div>
-                <div class="col-md-2 col-sm-12 headshot-col">
+                <div class="col-md-2 headshot-col">
                     <img src="images/blue2_orange_square.png" class="headshot">
                 </div>
             </div>
@@ -198,7 +198,7 @@
                         <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject">
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" id="message" name="message" placeholder="Message" rows="5" required></textarea>
+                        <textarea class="form-control" id="message" name="message" placeholder="Message" rows="6" required></textarea>
                     </div>
                         <div class="text-center">
                             <button type="submit" class="btn">Submit</button>
