--- a/src/index.html
+++ b/src/index.html
@@ -189,13 +189,13 @@
             <div class="container-sm contact-form">
                 <form id="contactForm">
                     <div class="form-group">
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Name">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Name" required>
                     </div>
                     <div class="form-group">
-                        <input type="email" class="form-control" id="email" name="email" placeholder="Email Address">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Email Address" required>
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject">
+                        <input type="text" class="form-control" id="subject" name="subject" placeholder="Subject" required>
                     </div>
                     <div class="form-group">
                         <textarea class="form-control" id="message" name="message" placeholder="Message" rows="6" required></textarea>
